@@ -1,4 +1,5 @@
 * Asynchronous input/output.
+* Save the substitution list to a file instead of preferences to allow bigger lists (issue 145).
 * Animated showing and hiding of the replace bar.
 * Removed support to substitution lists in XML.
 * Compatibility with Firefox from 30.0 to 37.0.
